--- a/src/json/CMakeLists.txt
+++ b/src/json/CMakeLists.txt
@@ -2,3 +2,12 @@ add_library(lz_json ${LIBLZ_OBJ_TYPE} lz_json.c)
 
 install(TARGETS lz_json DESTINATION lib)
 install(FILES lz_json.h DESTINATION include/liblz/json)
+
+if (LIBLUA)
+		add_library(lz_jsonL ${LIBLZ_OBJ_TYPE} lz_jsonL.c)
+		target_link_libraries(lz_jsonL lz_json ${LIBLUA})
+
+		install(TARGETS lz_jsonL DESTINATION lib)
+		install(FILES lz_jsonL.h DESTINATION include/liblz/json)
+endif()
+
