Fixes for OSX/LLVM

--- a/src/json/CMakeLists.txt
+++ b/src/json/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(lz_json ${LIBLZ_OBJ_TYPE} lz_json.c)
+target_link_libraries(lz_json lz_tailq lz_kvmap)
 
 install(TARGETS lz_json DESTINATION lib)
 install(FILES lz_json.h DESTINATION include/liblz/json)
