export symbols from headers instead of internal

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,5 @@ add_subdirectory(heap)
 add_subdirectory(kvmap)
 add_subdirectory(tailq)
 add_subdirectory(json)
+
+install(FILES liblz.h DESTINATION include/)
